update N+1 query problem
